@@ -1,3 +1,6 @@
+- do not display any message when user screenshot when chrooted during install
+  of pkgs (#33752)
+- don't add resume=xxx to bootloader configuration if there is noresume (#33953)
 - ignore /proc/partitions when "solaris" extended partition is present (#33866)
 - translate the pkg summary when mdv-rpm-summary info is available
   (for the "Details" mode when installing packages)
